--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,14 @@ body::-webkit-scrollbar {
 	width: 0;
 }
 
+@font-face {
+	src: url("../font/Poppins.ttf");
+	font-family: Poppins;
+}
+
 body {
 	overflow-x: hidden;
-	background-color: #ffffff;
+	background-color: #f0f3f4;
 }
 
 @layer utilities {
